<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Store</string>
    <string name="deeplink_scheme">appstore</string>
    <string name="deeplink_host">public-app-store.firebaseapp.com</string>
    <string name="asset_statements" translatable="false">[{\"include\": \"https://public-app-store.firebaseapp.com/.well-known/assetlinks.json\"}]</string>

    <!--region Applications-->
    <string name="applications_subtitle_anonymous">anonymous</string>
    <string name="applications_subtitle_unverified">(unverified)</string>

    <string name="applications_menu_search">Search</string>
    <string name="applications_menu_sign_in">Sign in</string>
    <string name="applications_menu_send_verification_email">Send verification email</string>
    <string name="applications_menu_refresh">Refresh</string>
    <string name="applications_menu_sign_out">Sign out</string>
    <string name="applications_menu_invalidate_cache">Invalidate cache</string>
    <string name="applications_menu_notification_settings">Notification settings</string>

    <string name="applications_toast_verify_inbox">Unverified email, check your inbox</string>
    <string name="applications_toast_not_allowed">"¯\\_(ツ)_/¯\nYou are not allowed here!"</string>

    <string name="applications_toast_verification_email_sent">Check your inbox to verify your account</string>
    <string name="applications_toast_verification_email_error">Unable to send verification email</string>

    <string name="item_application_installed">Installed • %1$s • %2$s</string>
    <!--endregion-->

    <!--region Versions-->
    <string name="versions_header_installed_info">Installed\n%1$s (%2$d) • %3$s</string>

    <string name="versions_toast_application_installed">Application installed!</string>
    <string name="versions_toast_application_installed_action">Open</string>
    <string name="versions_toast_application_not_installed">Application not installed!</string>
    <string name="versions_toast_application_not_installed_uninstall_first">Application not installed!\nYou might need to uninstall it first.</string>
    <string name="versions_toast_application_not_installed_uninstall_first_action">@string/versions_menu_uninstall</string>
    <string name="versions_toast_application_removed">Application removed!</string>
    <string name="versions_toast_application_not_found">Application not found!</string>
    <string name="versions_toast_application_open_error">Unable to open this version</string>
    <string name="versions_toast_link_to_clipboard">Link copied to clipboard</string>
    <string name="versions_toast_link_error">Unable to start this link:</string>

    <string name="versions_menu_search">Search</string>
    <string name="versions_menu_info">App info</string>
    <string name="versions_menu_stop">Force stop</string>
    <string name="versions_menu_uninstall">Uninstall</string>
    <string name="versions_menu_play_store">Play Store</string>
    <string name="versions_menu_create_shortcut">Create shortcut</string>
    <string name="versions_menu_notification_settings">Notification settings</string>

    <string name="versions_tooltip_open">Open</string>

    <string name="item_version_downloading">Downloading…</string>
    <string name="item_version_installing">Installing…</string>
    <string name="item_version_opening">Opening…</string>

    <string name="version_menu_cancel">Cancel</string>
    <string name="version_menu_download">Download</string>
    <string name="version_menu_install">Install</string>
    <string name="version_menu_share">Share</string>
    <string name="version_menu_delete">Delete</string>
    <!--endregion-->

    <!--region Shortcuts-->
    <string name="shortcut_added_to_home_screen">Shortcut added to home screen.</string>
    <string name="shortcut_application_removed">This application has been removed.</string>
    <!--endregion-->

</resources>
